[package]
name = "hello_world"
version = "0.1.0"
authors = ["Nico"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
# crossterm = "0.17"
# tui = { version = "0.12", default-features = false, features = ['crossterm'] }